# proxsgd-quantile-regression

./: CITATION.cff  LICENSE  README.md  notebooks:01_SGD_Quantile_Regression_Utils.ipynb  notebooks:02_SGD_Quantile_Results.ipynb  pyproject.toml  requirements-repro.txt  requirements.txt
data/: .gitignore  CITATION.cff  README.md
examples/: prediction_interval_demo.py  quick_start.py
notebooks/: 01_SGD_Quantile_Regression_Utils.ipynb  02_SGD_Quantile_Results.ipynb
results/: README.md  cps_qr_scaling_results_combined.csv  cps_qr_scaling_results_irls.csv  cps_qr_scaling_results_proxsgd.csv
results/tables/: cps_qr_scaling_results_lp.csv  robustness_results.csv  robustness_results_lp.csv
src/: __init__.py  sgd_quantile.py
